--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
                     <img src="img/thumb-12.jpg" alt="" />
                 </div>
                 
-               <!--  <div class="prev-btn"></div>
-                <div class="next-btn"></div> -->
+                <div class="prev-btn"></div>
+                <div class="next-btn"></div>
 
             </div>
         </main>
